use .gitattributes extensions

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 # Normalize EOL for all files that Git considers text files.
 * text=auto eol=lf
+*.cs linguist-detectable=true
+*.css linguist-detectable=false
+*.js linguist-detectable=false
+*.html linguist-detectable=false  
+*.xml linguist-detectable=false
